Turn on a virtual screen
Also fix Makefile target dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: erlang
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 install:
-- sudo apt-get install luarocks
-- sudo apt-get install python-virtualenv
-- sudo luarocks install luafilesystem
-- sudo luarocks install moonscript
-- sudo luarocks install luasocket
-- sudo luarocks install busted
+  - sudo apt-get install luarocks
+  - sudo apt-get install python-virtualenv
+  - sudo luarocks install luafilesystem
+  - sudo luarocks install moonscript
+  - sudo luarocks install luasocket
+  - sudo luarocks install busted
 env:
   global:
   - secure: "MA1+zHILO7O99n5+nj6jxuqVHUM0ZcGFfiZ9GT/4JyOG8nGkKWXopW/PbDzj\nRRFW3oknkm9jwVgCccvb2oSCPhEUVEUwcdo6xMuCFnskQNAA4q/SWAXXcZvm\nLjaJHNIb66Nnti+dhfAtfNvw8InzV7RzlmBxRrlH9M/0+X2gE5U="
