--- a/src/hawk/sparkle/appcast.json
+++ b/src/hawk/sparkle/appcast.json
@@ -10,18 +10,33 @@
     "platforms": [{
       "name": "macosx",
       "arch": "universal",
-      "url": "http://files.projecthawkthorne.com/releases/v0.0.84/hawkthorne-osx.zip",
-      "length": 57980508
-    },{
-      "name": "windows",
-      "arch": "i386",
-      "url": "http://files.projecthawkthorne.com/releases/v0.0.84/hawkthorne-win-x86.zip",
-      "length": 53193990
+      "files": [{
+        "url": "http://files.projecthawkthorne.com/releases/v0.0.84/hawkthorne-osx.zip",
+        "length": 57980508
+      }]
     },{
       "name": "windows",
       "arch": "amd64",
-      "url": "http://files.projecthawkthorne.com/releases/v0.0.84/hawkthorne-win-x64.zip",
-      "length": 53480672
+      "files": [{
+        "url": "http://files.projecthawkthorne.com/releases/v0.0.84/x64/DevIL.dll",
+        "length": 885248
+      },{
+        "url": "http://files.projecthawkthorne.com/releases/v0.0.84/x64/SDL.dll",
+        "length": 395776
+      },{
+        "url": "http://files.projecthawkthorne.com/releases/v0.0.84/x64/OpenAL32.dll",
+        "length": 464384
+      },{
+        "url": "http://files.projecthawkthorne.com/releases/v0.0.84/x64/hawkthorne.exe",
+        "length": 55076571
+      }]
+    },{
+      "name": "windows",
+      "arch": "i386",
+      "files": [{
+        "url": "http://files.projecthawkthorne.com/releases/v0.0.84/x86/DevIL.dll",
+        "length": 0
+      }]
     }]
   }]
 }
