--- a/src/hawk/sparkle/appcast.json
+++ b/src/hawk/sparkle/appcast.json
@@ -35,7 +35,16 @@
       "arch": "i386",
       "files": [{
         "url": "http://files.projecthawkthorne.com/releases/v0.0.84/x86/DevIL.dll",
-        "length": 0
+        "length": 730112
+      },{
+        "url": "http://files.projecthawkthorne.com/releases/v0.0.84/x86/SDL.dll",
+        "length": 358912
+      },{
+        "url": "http://files.projecthawkthorne.com/releases/v0.0.84/x86/OpenAL32.dll",
+        "length": 423424
+      },{
+        "url": "http://files.projecthawkthorne.com/releases/v0.0.84/x86/hawkthorne.exe",
+        "length": 54379227
       }]
     }]
   }]
