--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 install:
-  - sudo apt-get install python-virtualenv unzip lua5.1
+  - sudo apt-get install python-virtualenv lua5.1
   - sudo make /usr/bin/love
   - mkdir -p $TRAVIS_BUILD_DIR/share/love/
 env:
