--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,9 @@ language: erlang
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - sudo apt-get install python-virtualenv lua5.1
-  - sudo add-apt-repository -y ppa:bartbes/love-stable
-  - sudo apt-get update -qq
-  - sudo apt-get install -y love
 install:
+  - sudo apt-get install python-virtualenv lua5.1
+  - sudo make /usr/bin/love
   - mkdir -p $TRAVIS_BUILD_DIR/share/love/
 env:
   global:
