--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: erlang
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+install:
   - sudo apt-get install python-virtualenv lua5.1
   - sudo add-apt-repository -y ppa:bartbes/love-stable
-  - sudo apt-get update -qq
+  - sudo apt-get update -y -f
   - sudo apt-get install -y love
-install:
   - mkdir -p $TRAVIS_BUILD_DIR/share/love/
 env:
   global:
