--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 install:
+  - sudo apt-get install python-dev libffi-dev libssl-dev
   - sudo apt-get install python-virtualenv lua5.1
   - sudo add-apt-repository -y ppa:bartbes/love-stable
   - sudo apt-get update -y -f
