--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
-language: erlang
+language: general
+sudo: required
+dist: trusty
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 install:
-  - sudo apt-get install python-dev libffi-dev libssl-dev
-  - sudo apt-get install python-virtualenv lua5.1
+  - sudo apt-get update -y
+  - sudo apt-get install python-dev libffi-dev libssl-dev -y
+  - sudo apt-get install python-virtualenv lua5.1 -y
   - sudo add-apt-repository -y ppa:bartbes/love-stable
-  - sudo apt-get update -y -f
+  - sudo apt-get update -y
   - sudo apt-get install -y love
   - mkdir -p $TRAVIS_BUILD_DIR/share/love/
 env:
