--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: general
 sudo: required
-dist: trusty
+dist: bionic
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
@@ -8,10 +8,6 @@ install:
   - sudo apt-get update -y
   - sudo apt-get install python-dev libffi-dev libssl-dev -y
   - sudo apt-get install python-virtualenv lua5.1 -y
-  - sudo add-apt-repository -y ppa:bartbes/love-stable
-  - sudo apt-get update -y
-  - sudo apt-get install -y love
-  - mkdir -p $TRAVIS_BUILD_DIR/share/love/
 env:
   global:
   - XDG_DATA_HOME="$TRAVIS_BUILD_DIR/share"
@@ -20,5 +16,5 @@ addons:
   artifacts:
     paths:
       - ./build/hawkthorne-osx.zip
-      - ./build/hawkthorne-win-x86.zip
+      - ./build/hawkthorne-win-x86_64.zip
       - ./build/hawkthorne.love
