--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: general
 sudo: required
 dist: bionic
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
 install:
   - sudo apt-get update -y
-  - sudo apt-get install python-dev libffi-dev libssl-dev -y
+  - sudo apt-get install xvfb python-dev libffi-dev libssl-dev -y
   - sudo apt-get install python-virtualenv lua5.1 -y
+after_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 env:
   global:
   - XDG_DATA_HOME="$TRAVIS_BUILD_DIR/share"
