--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ addons:
       - lua5.1
       - libpulse0
       - libsdl2-2.0-0
+      - alsa
+      - alsa-tools
 after_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
