--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
       - libsdl2-2.0-0
       - alsa
       - alsa-tools
-after_install:
+script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 env:
