--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,13 @@ addons:
       - libsdl2-2.0-0
       - alsa
       - alsa-tools
-script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
 env:
   global:
   - XDG_DATA_HOME="$TRAVIS_BUILD_DIR/share"
-script: make deploy
+script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - make deploy 
 artifacts:
     paths:
       - ./build/hawkthorne-osx.zip
