--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,9 @@ env:
 script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - make deploy 
-artifacts:
+  - "make deploy"
+before_deploy:
+  artifacts:
     paths:
       - ./build/hawkthorne-osx.zip
       - ./build/hawkthorne-win-x86_64.zip
