--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ addons:
       - libsdl2-2.0-0
       - alsa
       - alsa-tools
+  services:
+    - xvfb
   artifacts:
     paths:
       - ./build/hawkthorne-osx.zip
@@ -27,6 +29,4 @@ env:
   global:
   - XDG_DATA_HOME="$TRAVIS_BUILD_DIR/share"
 script:
-  - "export DISPLAY=:99.0"
-  - "xvfb-run :99 -screen 0 1024x768x24"
   - "make deploy"
