--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,6 @@ addons:
       - libsdl2-2.0-0
       - alsa
       - alsa-tools
-  services:
-    - xvfb
   artifacts:
     paths:
       - ./build/hawkthorne-osx.zip
@@ -28,5 +26,8 @@ addons:
 env:
   global:
   - XDG_DATA_HOME="$TRAVIS_BUILD_DIR/share"
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 script:
-  - "make deploy"
+  - "xvfb-run make deploy"
