--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
-language: general
-sudo: required
-dist: trusty
+language: python
+os: linux
+dist: bionic
+services:
+  - xvfb
 before_install:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
 install:
   - sudo apt-get update -y
   - sudo apt-get install python-dev libffi-dev libssl-dev -y
   - sudo apt-get install python-virtualenv lua5.1 -y
-  - sudo add-apt-repository -y ppa:bartbes/love-stable
-  - sudo apt-get update -y
-  - sudo apt-get install -y love
+  # download Love2D 0.10.1 and the liblove dependency (links are for x64 architecture)
+  - wget https://github.com/love2d/love/releases/download/0.10.1/liblove0_0.10.1ppa1_amd64.deb
+  - wget https://github.com/love2d/love/releases/download/0.10.1/love_0.10.1ppa1_amd64.deb
+  # install Love2D 0.10.1
+  - sudo apt install libphysfs1  # required dependency
+  - sudo apt-get install ./liblove0_0.10.1ppa1_amd64.deb
+  - sudo apt-get install ./love_0.10.1ppa1_amd64.deb
   - mkdir -p $TRAVIS_BUILD_DIR/share/love/
 env:
   global:
